# Bike-Bench

./: .gitignore  README.md  env.yml  env_cuda.yml  pyproject.toml
benchmark_models/: 0_baseline_dataset.ipynb  1_baseline_dataset_sampling.ipynb  3_grad_opt.ipynb  4_nsga2.ipynb  5_llms.ipynb  6_OAGMs.ipynb  llm_utils.py  oagm_utils.py
benchmark_models/LLM_prompts/: 0_system_prompt.txt  10_invalid_data_intro.txt  12_invalid_scores_intro.txt  13_condition.txt  13_condition_2.txt  15_task.txt  1_intro.txt  2_parameter_descriptions.txt  3_criterion_descriptions.txt  4_condition_intro.txt  4_condition_intro_2.txt  6_valid_data_intro.txt  8_valid_scores_intro.txt
benchmark_models/libmoon/: readme.txt
benchmark_models/results/models/: CTGAN.pkl  TVAE.pkl
introductory_notebooks/: aesthetics_optimization.ipynb  datasets.ipynb  design_evaluation.ipynb  ergonomics_optimization copy.ipynb  ergonomics_optimization.ipynb  rendering.ipynb
src/bikebench.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/bikebench/benchmarking/: benchmarking_utils.py  public_benchmarking_utils.py  recalculate_reference_point.ipynb  scoring.py
src/bikebench/conditioning/: conditioning.py  generate_text_conditions.ipynb
src/bikebench/data_loading/: data_loading.py  dataverse_sync.ipynb  dataverse_utils.py  execute_upload_missing.py
src/bikebench/design_evaluation/: design_evaluation.py
src/bikebench/embedding/: collect_embedding_data.ipynb  dataset_rendering_tools.py  embedding_predictor.py  synthetic_data_generation.ipynb
src/resources/: PlainRoadBikeStandardized.txt
(+815 files in other folders)
