[build-system]
requires = ["setuptools>=62", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bikebench"       # display/distribution name (hyphens OK)
version = "0.0.0"
requires-python = ">=3.9"

[tool.setuptools.packages.find]
where = ["src"]              # tell setuptools packages are under src/

[tool.setuptools.package-dir]
"" = "src"                   # root package dir is src/
